overflow issue on maring.edu

--- a/web/themes/custom/echotimes/css/theme/events.css
+++ b/web/themes/custom/echotimes/css/theme/events.css
@@ -15,7 +15,9 @@
 		}
 
 		& > .cell:last-of-type {
-		  width: auto;
+      display: grid;
+      grid-template-columns: auto auto;
+		  width: unset;
 		}
 	}
 }
